Further specify location

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <h2>About</h2>
       <dl>
         <dt>Based in</dt>
-        <dd>The Netherlands</dd>
+        <dd>Rotterdam area, The Netherlands</dd>
 
         <dt>E-mail address</dt>
         <dd><a href="mailto:timseverien@gmail.com" target="_blank">timseverien@gmail.com</a></dd>
